--- a/index.html
+++ b/index.html
@@ -855,14 +855,14 @@ Quantity
 <div class="price-per-item__container">
 <quantity-input class="quantity" data-url="http://Catur77.nikgapps.com/" data-section="template--16834096922841__main">
 <button class="quantity__button no-js-hidden" name="minus" type="button">
-<span class="visually-hidden">Decrease quantity forKlikvegas - Alternatif Situs Slot Gacor Anti Rungkat & Terpercaya</span>
+<span class="visually-hidden">Decrease quantity forKlikvegas - Musim Gacor Maxwin Sedang Melanda Situs Ini</span>
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" class="icon icon-minus" fill="none" viewBox="0 0 10 2">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M.5 1C.5.7.7.5 1 .5h8a.5.5 0 110 1H1A.5.5 0 01.5 1z" fill="currentColor">
 </svg>
 </button>
 <input class="quantity__input" type="number" name="quantity" id="Quantity-template--16834096922841__main" data-cart-quantity="0" data-min="1" min="1" step="1" value="1" form="product-form-template--16834096922841__main" />
 <button class="quantity__button no-js-hidden" name="plus" type="button">
-<span class="visually-hidden">Increase quantity forKlikvegas - Alternatif Situs Slot Gacor Anti Rungkat & Terpercaya</span>
+<span class="visually-hidden">Increase quantity forKlikvegas - Musim Gacor Maxwin Sedang Melanda Situs Ini</span>
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" class="icon icon-plus" fill="none" viewBox="0 0 10 10">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1 4.51a.5.5 0 000 1h3.5l.01 3.5a.5.5 0 001-.01V5.5l3.5-.01a.5.5 0 00-.01-1H5.5L5.49.99a.5.5 0 00-1 .01v3.5l-3.5.01H1z" fill="currentColor">
 </svg>
